# mindbgWithUI

./: .gitignore  CMakeLists.txt  LICENSE  README  imgui.ini
examples/: a.out  hello.cpp  stack_unwinding.cpp  test.cpp
ext/libelfin/examples/: Makefile  a.out  dumpLines.txt  dumpSection.txt  dumpSegments.txt  dumpSyms.txt  dumpTrees.txt  find-pc.cc  test.cpp
include/: asmparaser.hpp  breakpoint.hpp  debugger.hpp  registers.hpp  symboltype.hpp
src/: minidbg.cpp
